# skema

./: .dockerignore  .gitignore  0001-Fixed-JSON-parsing-issues-for-some-indexers-but-pres.patch  Dockerfile  README.md  config.example.yaml  dev.sh  docker-compose.yml  flake.nix
.github/workflows/: docker-build.yml  test.yml
scripts/: bump-version.sh
server/: cabal.project  config.example.yaml  skema.cabal
server/app/: Main.hs
server/scripts/: GenerateConfig.hs  coverage.sh
server/src/Skema/: Auth.hs  Clock.hs  Logging.hs  Version.hs
server/src/Skema/API/: OpenApi.hs  Server.hs  Types.hs  Utils.hs
server/src/Skema/API/Handlers/: Acquisition.hs  Auth.hs  Catalog.hs  Clusters.hs  Config.hs  Diffs.hs  Downloads.hs  Events.hs  Filesystem.hs  Library.hs  QualityProfiles.hs  Static.hs  Stats.hs  Tasks.hs  Utils.hs  Version.hs
server/src/Skema/API/Types/: Acquisition.hs  Auth.hs  Catalog.hs  Clusters.hs  Common.hs  Config.hs  Diffs.hs  Downloads.hs  Events.hs  Filesystem.hs  Library.hs  QualityProfiles.hs  Tasks.hs  Version.hs
server/src/Skema/Adapters/: Crypto.hs
server/src/Skema/Auth/: JWT.hs  Store.hs  Types.hs
server/src/Skema/Config/: Defaults.hs  Defaults.hs-boot  Directories.hs  Discovery.hs  EnvOverrides.hs  Generate.hs  Loader.hs  Migrations.hs  PathExpansion.hs  Safe.hs  Schema.hs  SchemaClass.hs  SchemaInstances.hs  Types.hs  Types.hs-boot  Validation.hs
server/src/Skema/Core/: Catalog.hs  Library.hs  Metadata.hs  TaskManager.hs
server/src/Skema/Database/: Connection.hs  Migrations.hs  Repository.hs  Types.hs  Types.hs-boot  Utils.hs
server/src/Skema/Database/Repository/: Acquisition.hs  Catalog.hs  Clusters.hs  Diffs.hs  Downloads.hs  Quality.hs  Releases.hs  SearchHistory.hs  Settings.hs  Stats.hs  Tracks.hs
server/src/Skema/Database/Repository/Catalog/: Album.hs  Artist.hs  Overview.hs  Types.hs
server/src/Skema/Domain/: Acquisition.hs  Catalog.hs  Config.hs  ConfigJSON.hs  Converters.hs  Download.hs  Errors.hs  Identification.hs  Import.hs  Library.hs  Matching.hs  Metadata.hs  PathFormatter.hs  Quality.hs  Scoring.hs
server/src/Skema/DownloadClient/: Deluge.hs  NZBGet.hs  QBittorrent.hs  SABnzbd.hs  Transmission.hs  Types.hs
server/src/Skema/Events/: Bus.hs  Types.hs  Types.hs-boot  Utils.hs
server/src/Skema/FileSystem/: Browser.hs  PathFormatter.hs  Scanner.hs  Trash.hs  Utils.hs  Watcher.hs
server/src/Skema/HTTP/: Client.hs
server/src/Skema/Indexer/: Client.hs  Prowlarr.hs  Search.hs  Types.hs  Utils.hs
server/src/Skema/Media/: Client.hs  Storage.hs  Types.hs  Utils.hs
server/src/Skema/Media/Providers/: CoverArtArchive.hs  FanartTV.hs  ITunes.hs  LastFM.hs  MusicBrainz.hs
server/src/Skema/MusicBrainz/: ArtistImage.hs  Client.hs  Identify.hs  Matching.hs  Types.hs  Utils.hs
server/src/Skema/Notifications/: Pushover.hs  Types.hs
server/src/Skema/Scraper/: Http.hs  Metacritic.hs  Pitchfork.hs
server/src/Skema/Services/: Acquisition.hs  AsyncRegistry.hs  Catalog.hs  Common.hs  Dependencies.hs  DiffGenerator.hs  Download.hs  DownloadMonitor.hs  DownloadOrchestrator.hs  DownloadPostProcessor.hs  Filters.hs  Grouper.hs  Identifier.hs  Image.hs  Importer.hs  Metadata.hs  MetadataWriter.hs  Notifications.hs  Persister.hs  Registry.hs  Scanner.hs  Slskd.hs  SourceEvaluator.hs  Stats.hs  Supervisor.hs  TaskManager.hs  Thumbnailer.hs  TrashCleanup.hs  Types.hs
server/src/Skema/Services/Download/: Client.hs  Monitor.hs  RSSMonitor.hs  Scoring.hs  Search.hs  Submission.hs
server/src/Skema/Slskd/: Client.hs  Search.hs  Types.hs
server/src/Skema/Tasks/: Types.hs
server/src/Skema/YouTube/: Client.hs
server/test/: Spec.hs
server/test/Helpers/: Builders.hs  EventAssertions.hs  Handler.hs  MockClient.hs  MockHttp.hs  TempLibrary.hs  TestEnv.hs
server/test/Integration/: AcquisitionServiceSpec.hs  CatalogAlbumRepoSpec.hs  CatalogArtistRepoSpec.hs  ClustersRepoSpec.hs  DownloadMonitorSpec.hs  DownloadsRepoSpec.hs  EndToEndSpec.hs  GrouperSpec.hs  ImageServiceSpec.hs  IndexerStreamingSpec.hs  QualityProfilesHandlerSpec.hs  QualityRepoSpec.hs  ScanGroupIdentifySpec.hs  SubmissionSpec.hs  TracksRepoSpec.hs
server/test/Unit/: ConfigSpec.hs  IndexerSpec.hs  MatchingSpec.hs  MusicBrainzSpec.hs  PathFormatterSpec.hs  SlskdSpec.hs  StaticImageSpec.hs
server/test/Unit/Domain/: AcquisitionSpec.hs  CatalogSpec.hs  DownloadSpec.hs  IdentificationSpec.hs  ImportSpec.hs  MetadataSpec.hs  PathFormatterSpec.hs  QualitySpec.hs  ScoringSpec.hs
server/test/Unit/DownloadClient/: NZBGetSpec.hs  QBittorrentSpec.hs  SABnzbdSpec.hs  TransmissionSpec.hs
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js  vitest.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  index.css  index.tsx
web/src/components/: AlbumReleasesList.tsx  AlbumReleasesModal.tsx  ClusterCard.tsx  ConfigFields.generated.tsx  ErrorBoundary.tsx  FileBrowserModal.tsx  FilterBuilder.tsx  IdentificationNav.tsx  ImageWithFallback.tsx  LibraryNav.tsx  LoadingSkeleton.test.tsx  LoadingSkeleton.tsx  LoadingState.tsx  Modal.tsx  PaginationControls.tsx  PathInput.tsx  RecentlyFollowedArtists.tsx  RecentlyReleasedAlbums.tsx  SearchHistoryModal.tsx  SourceModal.tsx  StatusLine.tsx  TrackItem.tsx  UniversalSearch.tsx  UpcomingAlbums.tsx  UrlInput.tsx  WantedAlbumsSummary.tsx
web/src/components/config/: DownloadClientModal.tsx  IndexerModal.tsx  NotificationProviderModal.tsx  index.ts
web/src/components/match-viz/: ClusterModal.tsx  (+6 more)
web/src/hooks/: useAlbumsFilterState.ts  useOnlineStatus.ts  usePagination.ts  useQueries.ts  useSSE.ts  useSSEEvent.ts
web/src/lib/: api.ts  errors.ts  events.ts  formatters.ts  quality.ts  queryBuilder.ts  queryClient.ts
web/src/pages/: AcquisitionSources.tsx  AlbumDetail.tsx  Albums.tsx  ArtistDetail.tsx  Clusters.tsx  Config.tsx  Dashboard.tsx  Downloads.tsx  FollowedArtists.tsx  Identification.tsx  Login.tsx  MetadataDiffs.tsx  QualityProfiles.tsx  Tracks.tsx  WantedAlbums.tsx
web/src/store/: index.ts
web/src/test/: setup.ts  utils.tsx
web/src/types/: api.ts  config.generated.ts
(+18 files in other folders)
