cabal-version: 3.4
name: skema
version: 0.1.0.0
synopsis: Music library management and acquisition system
description:
  Skema is a system for managing and organizing music libraries with automatic
  metadata syncing, album art, lyrics, and intelligent music acquisition through
  torrents and NZBs.
homepage: https://github.com/rembo10/skema
bug-reports: https://github.com/rembo10/skema/issues
license: Unlicense
author: rembo10
maintainer: rembo10@users.noreply.github.com
category: Audio, Sound
stability: experimental
build-type: Simple
tested-with: GHC == 9.10.3

source-repository head
  type: git
  location: https://github.com/rembo10/skema

common common-options
  default-language: Haskell2010
  mixins: base hiding (Prelude)
        , relude (Relude as Prelude)
        , relude
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

library
  import: common-options
  hs-source-dirs: src

  exposed-modules:
    Skema.Core.Library
    Skema.Core.Metadata
    Skema.FileSystem.Scanner
    Skema.FileSystem.Watcher
    Skema.FileSystem.PathFormatter
    Skema.FileSystem.Browser
    Skema.Config.Types
    Skema.Config.Loader
    Skema.Config.Discovery
    Skema.Config.Directories
    Skema.Config.PathExpansion
    Skema.Config.Validation
    Skema.Config.SchemaClass
    Skema.Config.SchemaInstances
    Skema.Config.Generate
    Skema.Database.Types
    Skema.Database.Utils
    Skema.Database.Connection
    Skema.Database.Migrations
    Skema.Database.Repository
    Skema.Database.Repository.Catalog
    Skema.Database.Repository.Tracks
    Skema.Database.Repository.Clusters
    Skema.Database.Repository.Diffs
    Skema.Database.Repository.Acquisition
    Skema.Database.Repository.Downloads
    Skema.Database.Repository.Quality
    Skema.Database.Repository.Stats
    Skema.Database.Repository.Settings
    Skema.API.Types
    Skema.API.Types.Common
    Skema.API.Types.Auth
    Skema.API.Types.Library
    Skema.API.Types.Config
    Skema.API.Types.Events
    Skema.API.Types.Diffs
    Skema.API.Types.Clusters
    Skema.API.Types.Acquisition
    Skema.API.Types.Catalog
    Skema.API.Types.Downloads
    Skema.API.Types.Filesystem
    Skema.API.Types.QualityProfiles
    Skema.API.Server
    Skema.API.Handlers.Auth
    Skema.API.Handlers.Library
    Skema.API.Handlers.Config
    Skema.API.Handlers.Clusters
    Skema.API.Handlers.Stats
    Skema.API.Handlers.Acquisition
    Skema.API.Handlers.Catalog
    Skema.API.Handlers.Downloads
    Skema.API.Handlers.Diffs
    Skema.API.Handlers.Events
    Skema.API.Handlers.Filesystem
    Skema.API.Handlers.QualityProfiles
    Skema.API.Handlers.Static
    Skema.Auth.Types
    Skema.Auth.Store
    Skema.Auth
    Skema.Auth.JWT
    Skema.Logging
    Skema.HTTP.Client
    Skema.MusicBrainz.Types
    Skema.MusicBrainz.Utils
    Skema.MusicBrainz.Matching
    Skema.MusicBrainz.Client
    Skema.MusicBrainz.Identify
    Skema.MusicBrainz.ArtistImage
    Skema.Domain.Identification
    Skema.Domain.Converters
    Skema.Domain.Config
    Skema.Domain.Errors
    Skema.Domain.Metadata
    Skema.Domain.Quality
    Skema.Adapters.Crypto
    Skema.Media.Types
    Skema.Media.Utils
    Skema.Media.Client
    Skema.Media.Storage
    Skema.Media.Providers.FanartTV
    Skema.Media.Providers.CoverArtArchive
    Skema.Media.Providers.LastFM
    Skema.Media.Providers.ITunes
    Skema.Media.Providers.MusicBrainz
    Skema.Indexer.Types
    Skema.Indexer.Utils
    Skema.Indexer.Client
    Skema.Indexer.Search
    Skema.DownloadClient.Types
    Skema.DownloadClient.SABnzbd
    Skema.DownloadClient.Transmission
    Skema.DownloadClient.QBittorrent
    Skema.Events.Types
    Skema.Events.Utils
    Skema.Events.Bus
    Skema.Services.Types
    Skema.Services.Dependencies
    Skema.Services.Common
    Skema.Services.Supervisor
    Skema.Services.AsyncRegistry
    Skema.Services.Scanner
    Skema.Services.Grouper
    Skema.Services.Identifier
    Skema.Services.DiffGenerator
    Skema.Services.Persister
    Skema.Services.Catalog
    Skema.Services.Acquisition
    Skema.Services.Image
    Skema.Services.Thumbnailer
    Skema.Services.Filters
    Skema.Services.Stats
    Skema.Services.SourceEvaluator
    Skema.Services.MetadataWriter
    Skema.Services.Registry
    Skema.Services.Download
    Skema.Services.Importer
    Skema.Scraper.Metacritic
    Skema.Scraper.Pitchfork

  other-modules:
    Paths_skema

  build-depends:
    base >= 4.17 && < 5
    , relude >= 1.2 && < 1.3
    , monatone
    , containers >= 0.6 && < 0.9
    , text >= 2.1 && < 2.2
    , bytestring >= 0.11 && < 0.13
    , time >= 1.12 && < 1.15
    , filepath >= 1.4 && < 1.6
    , directory >= 1.3 && < 1.4
    , unix >= 2.7 && < 2.9
    , fsnotify >= 0.4 && < 0.5
    , async >= 2.2 && < 2.3
    , aeson >= 2.1 && < 2.3
    , yaml >= 0.11 && < 0.12
    , stm >= 2.5 && < 2.6
    , sqlite-simple >= 0.4 && < 0.5
    , postgresql-simple >= 0.7 && < 0.8
    , resource-pool >= 0.4 && < 0.5
    , servant >= 0.20 && < 0.21
    , servant-server >= 0.20 && < 0.21
    , servant-client >= 0.20 && < 0.21
    , servant-event-stream >= 0.3 && < 0.4
    , wai >= 3.2 && < 3.3
    , warp >= 3.3 && < 3.5
    , wai-app-static >= 3.1 && < 3.2
    , http-types >= 0.12 && < 0.13
    , http-client >= 0.7 && < 0.8
    , http-client-tls >= 0.3 && < 0.4
    , http-media >= 0.8 && < 0.9
    , katip >= 0.8 && < 0.9
    , exceptions >= 0.10 && < 0.11
    , assignment
    , edit-distance >= 0.2 && < 0.3
    , uuid >= 1.3 && < 1.4
    , optparse-applicative >= 0.18 && < 0.19
    , bcrypt >= 0.0.11 && < 0.1
    , crypton >= 0.34 && < 2.0
    , memory >= 0.18 && < 0.19
    , jose >= 0.11 && < 0.13
    , lens >= 5.0 && < 5.4
    , mtl >= 2.2 && < 2.4
    , base16-bytestring >= 1.0 && < 1.1
    , JuicyPixels >= 3.3 && < 3.4
    , scalpel >= 0.6 && < 0.7

executable skema
  import: common-options
  hs-source-dirs: app
  main-is: Main.hs

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    base >= 4.17 && < 5
    , relude >= 1.2 && < 1.3
    , skema
    , optparse-applicative >= 0.18 && < 0.19
    , katip >= 0.8 && < 0.9
    , async >= 2.2 && < 2.3
    , exceptions >= 0.10 && < 0.11
    , filepath >= 1.4 && < 1.6
    , unix >= 2.7 && < 2.9

test-suite skema-test
  import: common-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  other-modules:
    Integration.GrouperSpec
    Integration.ScanGroupIdentifySpec
    Integration.EndToEndSpec
    Helpers.TestEnv
    Helpers.Builders
    Helpers.EventAssertions
    Helpers.TempLibrary

  build-depends:
    base >= 4.17 && < 5
    , relude >= 1.2 && < 1.3
    , skema
    , tasty >= 1.4 && < 1.6
    , tasty-hunit >= 0.10 && < 0.11
    , temporary >= 1.3 && < 1.4
    , stm >= 2.5 && < 2.6
    , directory >= 1.3 && < 1.4
    , filepath >= 1.4 && < 1.6
    , katip >= 0.8 && < 0.9
    , time >= 1.12 && < 1.15
    , async >= 2.2 && < 2.3
